--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>HomeTracker</title>
      <!-- Favicon -->
-     <link rel="icon" type="image/x-icon" href="/assets/img/favicon/favicon.ico" />
+     <link rel="icon" type="image/x-icon" href="/assets/img/icons/hi.png" />
 
      <!-- Fonts -->
      <link rel="preconnect" href="https://fonts.googleapis.com" />
